test_files/s_cproc/macro_object_expand/test_020/e.output
/home/jason/github/stupid_lib/test_files/s_cproc/macro_define/test_020/i.input:1:19: error: missing ')' in macro parameter list
 #define VA1(arg...,.) (##arg)
                   ^
